--- a/client/index.html
+++ b/client/index.html
@@ -3,29 +3,7 @@
     <title>Realtime-Photo Tutorial</title>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <style>
-      #dropzone {
-        width: 200px;
-        height: 80px;
-        margin: auto;
-        margin-top: 10px;
-        border: solid 2px #eee;
-        text-align: center;
-        padding: 10px;
-      }
-      #images {
-        width: 220px;
-        min-height: 100px;
-        border: solid 2px #eee;
-        margin: auto;
-        margin-top: 10px;
-        overflow: hidden;
-      }
-      #images img {
-        width: 100%;
-        height: auto;
-      }
-    </style>
+    <link rel='stylesheet' href='./main.css'>
   </head>
   <body>
     <div id='images'></div>
